# rustboard

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  config.rs  memory.x  nrf_rustboard_central.hex  nrf_rustboard_central.uf2  nrf_rustboard_peripheral.hex  nrf_rustboard_peripheral.uf2
rustboard_macros/: Cargo.toml
rustboard_macros/src/: lib.rs
rustboard_source/: Cargo.toml  user_config.toml
rustboard_source/.cargo/: config.toml
rustboard_source/src/: key_provision.rs  keymap.rs  matrix.rs  peripherals.rs  storage.rs
rustboard_source/src/ble/: central.rs  services.rs
src/: battery.rs  config.rs  config_cpp.rs  config_rw.rs  key_provision.rs  keycodes.rs  keymap.rs  lib.rs  main.rs  matrix.rs  peripherals.rs
src/ble/: mod.rs  peripheral.rs  services.rs
